# MusicGenerator

./: .gitignore  README.md  batch_evaluator.py  ckpt_Large_extended.pt  ckpt_Large_robust.pt  ckpt_Medium_robust.pt  ckpt_Small_extended.pt  ckpt_Small_robust.pt  ckpt_Tiny_.pt  ckpt_Tiny_extended.pt  ckpt_Tiny_optimal.pt  ckpt_Tiny_robust.pt  ckpt_XL_extended.pt  ckpt_XL_robust.pt  ckpt_rnn_Large.pt  ckpt_rnn_Medium.pt  ckpt_rnn_Small.pt  ckpt_rnn_Tiny.pt  compare_scaling.py  continued_song.abc  generate.py  generate2.py  generate_continuation.py  generated_song.abc  main.py  optimal_results.csv  optimal_training_log.txt  plot_generator.py  pyproject.toml  rnn_generator.py  rnn_scaling_results.csv  rnn_training.py  study.py  study_optimal.py  study_optimal_2.py  test.py  train_transformer.py  training_insights.txt
batch_evaluation_results/: tune_10_Valid.abc  tune_11_Valid.abc  tune_12_Valid.abc  tune_13_Valid.abc  tune_14_Valid.abc  tune_15_Valid.abc  tune_16_Valid.abc  tune_17_Valid.abc  tune_18_Valid.abc  tune_1_Valid.abc  tune_2_Valid.abc  tune_3_Valid.abc  tune_4_Valid.abc  tune_5_Valid.abc  tune_6_Valid.abc  tune_7_Valid.abc  tune_8_Valid.abc  tune_9_Valid.abc
configs/: config.yaml
generated_content/: continue_songs.txt  from_scratch.txt
outputs/2025-11-27/21-15-19/.hydra/: hydra.yaml
outputs/2025-11-27/21-18-01/.hydra/: hydra.yaml
outputs/2025-11-27/21-23-06/.hydra/: hydra.yaml
outputs/2025-11-27/21-35-23/.hydra/: hydra.yaml
src/: __init__.py  converter.py  dataset.py  model.py  pipeline.py  rnn_model.py  tokenizer.py
(+14 files in other folders)
